# HW_WEB2

./: README.md  helper.logs
personal_helper/: README.md  pyproject.toml  setup.py
personal_helper/personal_helper/: Dockerfile  RecordBook.py  clean.py  helper.logs  logger.py  main.py  note_book.py  pyproject.toml  test_setup.py
